# arena-beta

./: README.md  bash  deploy_linera.sh  js  text  vercel.json
linera/: Cargo.toml  README.md
linera/src/: contract.rs  lib.rs  service.rs  state.rs
src/: index.css  main.tsx
src/components/: AgentCard.tsx  CreateDuelDialog.tsx  DuelCard.tsx  PlaceBetDialog.tsx  WalletConnect.tsx  WalletSync.tsx
src/components/landing/: CTASection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  StatsSection.tsx  WhyUsSection.tsx
src/contexts/: LineraContext.tsx
src/convex/: stats.ts
src/lib/: linera.ts
src/pages/: Arena.tsx  Auth.tsx  Landing.tsx  Whitepaper.tsx
