[package]
name = "agent-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.2", default-features = false }
async-trait = "0.1.77"
linera-sdk = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"

[dev-dependencies]
linera-sdk = { version = "0.15.7", features = ["test"] }
